Bug 1499854 - Binary should not be affected by locale r=asuth

Key::ToLocaleBasedKey() overlooked the existence of |eBinary| type,
probably because |eBinary| was added later and the code wasn't updated
properly.

Differential Revision: https://phabricator.services.mozilla.com/D24882